--- a/src/main/resources/templates/admin_movies.html
+++ b/src/main/resources/templates/admin_movies.html
@@ -54,7 +54,7 @@
                                               placeholder="Enter start date" required></p>
                         <p>Stop date: <input type="datetime-local" th:field="*{dateTo}" placeholder="Enter start date"
                                              required></p>
-                        <p><input th:href="admin_cinemas.html" type="submit" value="Add new movie"></p>
+                        <p><input th:href="admin_movies.html" type="submit" value="Add new movie"></p>
                     </form>
                 </div>
             </div>
