Edit of rooms and small changes

--- a/src/main/resources/templates/admin_cinema_edit.html
+++ b/src/main/resources/templates/admin_cinema_edit.html
@@ -28,7 +28,7 @@
                                     th:text="${city.getName()}"
                                     th:value="${city.getId()}" th:selected="currentCity"></option>
                         </select></p>
-                        <p> <input th:href="admin_city_edit.html" type="submit" value="Edit city"></p>
+                        <p> <input th:href="admin_cinema_edit.html" type="submit" value="Edit city"></p>
                     </form>
                 </div>
             </div>
