--- a/src/main/resources/templates/seances.html
+++ b/src/main/resources/templates/seances.html
@@ -25,6 +25,7 @@
                         <div class="mv-item-infor">
                             <h6><a href=""><span th:text="${seance.movie?.getTitle()}"></span></a></h6>
                             <p class="describe"><span th:text="${seance.movie?.getDescription()}"></span></p>
+                            <p>Room: <span th:text="${seance.cinemaRoom?.getName()}"></span></p>
                             <p>PRICE: <span th:text="${seance.getPrice()}"></span>$</p>
                             <p>DATE: <span th:text="${#temporals.format(seance.getDateTime(), 'dd-MM-yyyy HH:mm:ss')}"></span></p>
                             <a href="buyticket.html" th:href="@{/ticket/seance/{seanceId}(seanceId=${seance.getId()})}"><input type="submit" value="Buy ticket"></a>
