--- a/src/main/resources/templates/seances.html
+++ b/src/main/resources/templates/seances.html
@@ -23,7 +23,7 @@
                     <div class="movie-item-style-2 seance">
                         <img src="" th:src="${seance.getImg()}">
                         <div class="mv-item-infor">
-                            <h6><a href=""><span th:text="${seance.movie?.getTitle()}"></span></a></h6>
+                            <h6><span th:text="${seance.movie?.getTitle()}"></span></h6>
                             <p class="describe"><span th:text="${seance.movie?.getDescription()}"></span></p>
                             <p>Room: <span th:text="${seance.getCityName()+', '+seance.getCinemaName()+' ('+seance.cinemaRoom?.getName()+')'}"></span></p>
                             <p>PRICE: <span th:text="${seance.getPrice()}"></span>$</p>
