--- a/src/main/resources/templates/seancesInCinema.html
+++ b/src/main/resources/templates/seancesInCinema.html
@@ -22,7 +22,7 @@
                         <div class="movie-item-style-2">
                             <img src="" th:src="${seance.getImg()}">
                             <div class="mv-item-infor">
-                                <h6><a href=""><span th:text="${seance.movie?.getTitle()}"></span></a></h6>
+                                <h6><span th:text="${seance.movie?.getTitle()}"></span></h6>
                                 <p class="describe"><span th:text="${seance.movie?.getDescription()}"></span></p>
                                 <p>Room: <span th:text="${seance.cinemaRoom?.getName()}"></span></p>
                                 <p>PRICE: <span th:text="${seance.getPrice()}"></span>$</p>
